Styling and Structure

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,4 @@
+<div id="page_wrapper">
 <h1>this is new post</h1>
 <%= form_for :post, url: posts_path do |f| %>
   <p>
@@ -10,3 +11,4 @@
   </p>
   <%= f.submit "Save" %>
 <% end %>
+</div>
