--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,45 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'default', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'default', 'http://fonts.googleapis.com/css?family=Raleway:400,700' %>
     <%= javascript_include_tag 'default', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+ <div id="sidebar">
+ <div id="logo">
+ <%= link_to root_path do %>
+ <%= image_tag "logo.svg" %>
+ <% end %>
+ </div>
+ <ul>
+ <li class="category">Website</li>
+ <li><%= link_to "Blog",root_path %></li>
+ <li>About</li>
+ </ul>
+ <ul>
+ 	<li class="category">Social</li>
+ </ul>
+ <p class="sign_in">Admin Login </p>
+
+
+	<div id="main_content">
+		<div id="header">
+			
+				<p>All Posts</p>
+			
+				<p>About</p>
+			
+				
+			
+				<div class="buttons">
+					<button class="button"><%= link_to "New Post", new_post_path %></button>
+					<button class="button">Log Out</button>
+				</div>
+				<% flash.each do |name, msg| %>
+			<%= content_tag(:div, msg, class: "alert") %>
+		<% end %>
+		
     <%= yield %>
+  <body>
   </body>
 </html>
