--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,14 +1,4 @@
-<div id="page_wrapper">
+
 <h1>this is new post</h1>
-<%= form_for :post, url: posts_path do |f| %>
-  <p>
-  <%= f.label :title %>
-    <%= f.text_field :title %>
-  </p>
-  <p>
-  <%= f.label :body %>
-    <%= f.text_area :body %>
-  </p>
-  <%= f.submit "Save" %>
-<% end %>
-</div>
+<%= render 'form' %>
+
