--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= javascript_include_tag 'default', 'data-turbolinks-track': 'reload' %>
   </head>
 
- <div id="sidebar">
+ 
  <div id="logo">
  <%= link_to root_path do %>
  <%= image_tag "logo.svg" %>
@@ -18,7 +18,7 @@
  <ul>
  <li class="category">Website</li>
  <li><%= link_to "Blog",root_path %></li>
- <li>About</li>
+ <li><%= link_to "About", about_path %></li>
  </ul>
  <ul>
  	<li class="category">Social</li>
@@ -28,11 +28,13 @@
 
 	<div id="main_content">
 		<div id="header">
-			
+			<% if current_page?(root_path) %>
 				<p>All Posts</p>
-			
+			<% elsif current_page?(about_path) %>
 				<p>About</p>
-			
+			<% else %>
+				<%= link_to "Back to All Posts", root_path %>
+			<% end %>
 				
 			
 				<div class="buttons">
